--- a/style.css
+++ b/style.css
@@ -1,3 +1,105 @@
 body{
+    margin: 10px;
     font-family: 'Roboto', sans-serif;
+}
+.top-banner{
+    background-image: url(images/donation13.jpg);
+    background-repeat: no-repeat;
+    background-size:cover;
+    height: 100%;
+    padding: 7% 25%;
+    margin-bottom: 70px;
+}
+h1{
+    color: white;
+    font-size: 52px;
+    text-align: center;
+}
+.white-color{
+    color: white;
+    text-align: center;
+    padding: 10px 100px;
+    margin-bottom: 80px;
+}
+.link-button{
+    padding:10px 20px;
+    text-decoration: none;
+    color: white;
+    background-color: tomato;
+    border-radius: 5px;
+}
+.donate-today{
+    text-align: center;
+} 
+.donate-para{
+    text-align: center;
+    padding: 20px 350px;
+    margin-bottom: 50px;
+
+}
+.amount{
+    text-align: center;
+    margin-bottom: 70px;
+}
+.amount a{
+    text-decoration: none;
+    padding: 25px 15px;
+   background-color: rgb(238, 238, 238);
+   font-size: larger;
+   font-weight: 700;
+   border-radius: 5px;
+   margin: 5px;
+   color: gray;
+}
+ #dui-shoto-tk{
+ background-color: rgb(244, 209, 209);
+ border: 1px solid tomato;
+ color: tomato;
+ }
+ .other-amount{
+    text-decoration: none;
+    text-align: center;
+    margin-bottom: -15px;
+    
+ }
+.other-amount a{
+    text-decoration: none;
+    color: rgb(134, 134, 128);
+}
+hr{
+    width: 600px;
+    margin-bottom: 30px;
+}
+.other-link-button{
+    text-align: center;
+}
+.img-pic{
+    width: 50px;
+    background-position: left;
+}
+
+
+.donate-plan{
+    text-align: center;
+     margin-top: 80px;
+}
+.flex-container{
+    display: flex;
+    padding: 100px;
+    margin-top: -120px;
+}
+.family{
+    
+    margin: 15px;
+    padding:20px ;
+    border-radius: 5px;
+}
+#blue{
+background-color: rgb(217, 233, 239);
+}
+#red{
+background-color: rgb(248, 231, 234);
+}
+#yellow{
+    background-color: lightyellow;
 }
