--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    margin: 10px;
+    margin: 0;
     font-family: 'Roboto', sans-serif;
 }
 .top-banner{
@@ -102,4 +102,28 @@ background-color: rgb(248, 231, 234);
 }
 #yellow{
     background-color: lightyellow;
+}
+.donation-section{
+    padding: 100px;
+}
+
+.their-lives{
+    display: flex;
+    margin: 25px 5px;
+    box-shadow: 0.1rem 0.1rem 0.1rem #222,-0.1rem  0rem  0.1rem #222;
+}
+.donation0 img{
+    width:450px
+}
+.their-lives-para{
+    padding: 10px 25px;
+    
+}
+.contribute-button{
+    background-color: tomato;
+    border: 2px solid tomato;
+    padding: 7px 15px;
+    border-radius: 5px;
+    color: white;
+    margin-top: 30px;
 }
