--- a/style.css
+++ b/style.css
@@ -101,16 +101,17 @@ background-color: rgb(217, 233, 239);
 background-color: rgb(248, 231, 234);
 }
 #yellow{
-    background-color: lightyellow;
+    background-color: rgb(248, 248, 201);
 }
 .donation-section{
     padding: 100px;
+    margin-top: -100px;
 }
 
 .their-lives{
     display: flex;
     margin: 25px 5px;
-    box-shadow: 0.1rem 0.1rem 0.1rem #222,-0.1rem  0rem  0.1rem #222;
+    box-shadow: 0.1rem 0.1rem 0.1rem black,-0.1rem  0rem  0.1rem black;
 }
 .donation0 img{
     width:450px
@@ -126,4 +127,38 @@ background-color: rgb(248, 231, 234);
     border-radius: 5px;
     color: white;
     margin-top: 30px;
+}
+.my-updates{
+    text-align: center;
+    padding:0% 28%;
+}
+form{
+    background-color: rgb(253, 230, 206);
+    padding: 55px;
+    margin-top: 30px;
+}
+form input{
+    padding: 5px;
+    background-color: lightgray;
+    border: 1px lightgray solid;
+}
+form button{
+    text-decoration: none;
+    background-color: tomato;
+    color: white;
+    border: 1px solid tomato;
+    margin-left: -5px;
+    padding: 5px 10px;
+}
+footer{
+    background-color: black;
+    color: rgb(157, 152, 152);
+    text-align: center;
+    padding: 5px;
+    margin-top: 100px;
+}
+h5{
+    font-family:'Playball', cursive;
+    font-size: 20px;
+    color: tomato;
 }
